--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -39,3 +39,11 @@ nav a {
   text-decoration: none;
   border-radius: 4px;
 }
+
+a {
+  outline: none !important;
+}
+
+.modal-buttons {
+  text-align: right;
+}
