--- a/frontend/src/app/data-entry/population/detail/population-detail.component.html
+++ b/frontend/src/app/data-entry/population/detail/population-detail.component.html
@@ -1,7 +1,7 @@
 <div class="family-panel">
   <h3 class="title">
     <span>家庭基本信息</span>
-    <a href="javascript:void(0);">
+    <a href="javascript:void(0);" (click)="openModal(populationManagerModal)">
       <fa-icon [icon]="faEdit"></fa-icon>
     </a>
   </h3>
@@ -61,9 +61,14 @@
         <span>{{ item?.culture }}</span>
         <span>{{ item?.marriage }}</span>
         <span [caTextEllipsis]="item?.rmks" [title]="item?.rmks"></span>
-        <a href="javascript:void(0);" (click)="currentEditMember = item;openModal(memberManagerModal)">
-          <fa-icon [icon]="faEdit"></fa-icon>
-        </a>
+        <span>
+              <a (click)="removeMember(item?.id)">
+                <fa-icon [icon]="faTrash"></fa-icon>
+              </a>
+             <a href="javascript:void(0);" (click)="currentEditMember = item;openModal(memberManagerModal)">
+                <fa-icon [icon]="faEdit"></fa-icon>
+            </a>
+        </span>
       </div>
     </div>
   </div>
@@ -71,6 +76,11 @@
 
 <ng-template #memberManagerModal let-close="close" let-dismiss="dismiss">
   <gm-modal-container title="编辑家庭成员" [dismiss]="dismiss">
-    <gm-member-editor [data]="currentEditMember" [code]="data?.code" [populationId]="data?.id" [close]="close" (submitted)="submit()"></gm-member-editor>
+    <gm-member-editor [data]="currentEditMember" [code]="data?.code" [populationId]="data?.id" [close]="close" (submitted)="updateMembers()"></gm-member-editor>
+  </gm-modal-container>
+</ng-template>
+<ng-template #populationManagerModal let-close="close" let-dismiss="dismiss">
+  <gm-modal-container title="编辑家庭信息" [dismiss]="dismiss">
+    <gm-population-editor [data]="data" [communities]="communities" [close]="close" (submitted)="updatePolation()"></gm-population-editor>
   </gm-modal-container>
 </ng-template>
