--- a/frontend/src/app/data-entry/risk-checklist/data-editor/data-editor.component.html
+++ b/frontend/src/app/data-entry/risk-checklist/data-editor/data-editor.component.html
@@ -1,56 +1,80 @@
-<div class="form-info">
-  <dl>
-    <dt>社区</dt>
-    <dd>回民社区</dd>
-    <dt>登记人</dt>
-    <dd>张三</dd>
-    <dt>登记日期</dt>
-    <dd>2018/05/01</dd>
-  </dl>
+<div class="form-panel" *ngIf="!isSubmitting">
+  <form *ngIf="!isSubmitting" [formGroup]="formGroup" (ngSubmit)="submit()" novalidate>
+    <div class="form-group">
+      <div class="wrap">
+        <label>所属社区</label>
+        <ca-select formControlName="communityId">
+          <ca-option [value]="''">请选择所属社区</ca-option>
+          <ca-option *ngFor="let community of communities" [value]="community.id">{{ community.name }}</ca-option>
+        </ca-select>
+      </div>
+      <small *ngIf="formGroup.get('communityId').dirty && formGroup.get('communityId').hasError('required')" class="invalid-feedback">
+        Required field.
+      </small>
+    </div>
+    <div class="form-group">
+      <div class="wrap">
+        <label>事件名称</label>
+        <input type="text" class="form-control" formControlName="name" placeholder=""  caValidityClass/>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="wrap">
+        <label>发生时间</label>
+        <div class="input-group calendar">
+          <input class="form-control" placeholder="yyyy-mm-dd" bsDatepicker formControlName="happenDate" #d2="bsDatepicker" [bsConfig]="{ dateInputFormat: 'YYYY-MM-DD' }" caValidityClass>
+          <div class="input-group-append">
+            <fa-icon [icon]="faCalendar" (click)="d2.toggle()"></fa-icon>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="wrap">
+        <label>事件类型</label>
+        <div class="inner-wrap">
+          <div class="wrap">
+            <ca-input-radio [value]="'普通'" [checked]="true" formControlName="eventType">普通</ca-input-radio>
+          </div>
+          <div class="wrap">
+            <ca-input-radio [value]="'紧急'" formControlName="eventType">紧急</ca-input-radio>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="wrap">
+        <label>事件区域</label>
+        <input type="text" class="form-control" formControlName="area" placeholder=""  caValidityClass/>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="wrap">
+        <label>事件内容</label>
+        <textarea type="number" class="form-control" formControlName="content" placeholder=""  caValidityClass></textarea>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="wrap">
+        <label>是否发送信息</label>
+        <div class="inner-wrap">
+          <div class="wrap">
+            <ca-input-radio [value]="true" formControlName="isSendMessage">发送</ca-input-radio>
+          </div>
+          <div class="wrap">
+            <ca-input-radio [value]="false" [checked]="true" formControlName="isSendMessage">不发送</ca-input-radio>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal-buttons">
+      <button type="submit" class="btn btn-primary">Save</button>
+    </div>
+  </form>
 </div>
-<form *ngIf="!isSubmitting" [formGroup]="formGroup" (ngSubmit)="submit()" novalidate>
-  <div class="form-group">
-    <div class="wrap">
-      <label>活动名称</label>
-      <input type="text" class="form-control" formControlName="subject" placeholder=""  caValidityClass/>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="wrap">
-      <label>活动场所名称</label>
-      <input type="text" class="form-control" formControlName="subject" placeholder=""  caValidityClass/>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="wrap">
-      <label>参与人数</label>
-      <input type="text" class="form-control" formjoinAmount="joinAmount" placeholder=""  caValidityClass/>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="wrap">
-      <label>活动时间</label>
-      <input type="text" class="form-control" formControlName="activitiesDate" placeholder=""  caValidityClass/>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="wrap">
-      <label>活动地点</label>
-      <input type="text" class="form-control" formControlName="activitiesDate" placeholder=""  caValidityClass/>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="wrap">
-      <label>活动内容</label>
-      <textarea type="text" class="form-control" formControlName="content" placeholder="" caValidityClass></textarea>
-    </div>
-  </div>
-  <div class="modal-buttons">
-    <button type="submit" class="btn btn-primary">Save</button>
-  </div>
-</form>
 <ca-spinner *ngIf="isSubmitting" [state]="spinnerState" dotColor="grey">
-  <ng-container *ngIf="spinnerState === 'waiting'">Saving changes...</ng-container>
-  <ng-container *ngIf="spinnerState === 'success'">Changes have been saved successfully! Returning automatically in {{successMessageTimeoutInSeconds}} seconds.</ng-container>
-  <ng-container *ngIf="spinnerState === 'failed'">Failed to save your changes.</ng-container>
+  <ng-container *ngIf="spinnerState === 'waiting'">隐患表创建中...</ng-container>
+  <ng-container *ngIf="spinnerState === 'success'">隐患表创建成功! {{successMessageTimeoutInSeconds}} 秒后自动关闭窗口.</ng-container>
+  <ng-container *ngIf="spinnerState === 'failed'">隐患表创建失败!</ng-container>
 </ca-spinner>
