--- a/frontend/src/app/data-entry/risk-checklist/risk-table/risk-table.component.html
+++ b/frontend/src/app/data-entry/risk-checklist/risk-table/risk-table.component.html
@@ -1,15 +1,28 @@
 <div class="data-panel">
-    <gm-table-header [columns]="columns"></gm-table-header>
-    <div class="body">
-        <div class="data-item" *ngFor="let item of data">
-            <span>{{ item?.userName }}</span>
-            <span>{{ item?.name }}</span>
-            <span>{{ item?.isEnabled }}</span>
-            <span>{{ item?.createdBy }}</span>
-            <span>{{ item?.createdDate | date }}</span>
-            <span>
-              <a>删除</a>
-            </span>
-        </div>
+  <gm-table-header [columns]="columns"></gm-table-header>
+  <div class="body">
+    <div class="data-item" *ngFor="let item of data">
+      <span>{{ getCommunityNameById(item?.communityId) }}</span>
+      <span>{{ item?.name }}</span>
+      <span>{{ item?.happenDate | date }}</span>
+      <span>{{ item?.eventType }}</span>
+      <span>{{ item?.area }}</span>
+      <span [caTextEllipsis]="item?.content" [title]="item?.content"></span>
+      <span>{{ item?.isSendMessage }}</span>
+      <span>{{ item?.userMemberId }}</span>
+      <span>
+              <a href="javascript:void(0);" (click)="removeItem(item?.id)">
+                <fa-icon [icon]="faTrash"></fa-icon>
+              </a>
+              <a href="javascript:void(0);" (click)="currentEditItem = item; openModal(riskEditModal)">
+                <fa-icon [icon]="faEdit"></fa-icon>
+              </a>
+      </span>
     </div>
+  </div>
 </div>
+<ng-template #riskEditModal let-close="close" let-dismiss="dismiss">
+  <gm-modal-container [dismiss]="dismiss" [title]="'安全隐患排查表编辑'">
+    <gm-party-editor [communities]="communities" [data]="currentEditItem" [close]="close"></gm-party-editor>
+  </gm-modal-container>
+</ng-template>
