--- a/frontend/src/app/settings/group-manager/create/create.component.html
+++ b/frontend/src/app/settings/group-manager/create/create.component.html
@@ -1,8 +1,16 @@
 <form *ngIf="!isSubmitting" [formGroup]="formGroup" (ngSubmit)="submit()" novalidate>
-
+  <div class="form-group">
+    <div class="wrap">
+      <label>用户组名</label>
+      <input type="text" class="form-control" formControlName="name" placeholder=""  caValidityClass/>
+    </div>
+  </div>
+  <div class="modal-buttons">
+    <button type="submit" class="btn btn-primary">Save</button>
+  </div>
 </form>
 <ca-spinner *ngIf="isSubmitting" [state]="spinnerState" dotColor="grey">
-  <ng-container *ngIf="spinnerState === 'waiting'">Saving changes...</ng-container>
-  <ng-container *ngIf="spinnerState === 'success'">Changes have been saved successfully! Returning automatically in {{successMessageTimeoutInSeconds}} seconds.</ng-container>
-  <ng-container *ngIf="spinnerState === 'failed'">Failed to save your changes.</ng-container>
+  <ng-container *ngIf="spinnerState === 'waiting'">用户组创建中...</ng-container>
+  <ng-container *ngIf="spinnerState === 'success'">用户组创建成功! {{successMessageTimeoutInSeconds}} 秒后自动关闭窗口.</ng-container>
+  <ng-container *ngIf="spinnerState === 'failed'">用户组创建失败!</ng-container>
 </ca-spinner>
