--- a/frontend/src/app/settings/group-manager/group-table/group-table.component.html
+++ b/frontend/src/app/settings/group-manager/group-table/group-table.component.html
@@ -1,17 +1,17 @@
 <div class="data-panel">
-    <gm-table-header [columns]="columns"></gm-table-header>
-    <div class="body">
-        <div class="data-item" *ngFor="let item of data">
-            <span>{{ item?.id }}</span>
-            <span>{{ item?.name }}</span>
-          <span>
+  <gm-table-header [columns]="columns"></gm-table-header>
+  <div class="body">
+    <div class="data-item" *ngFor="let item of data">
+      <span>{{ item?.id }}</span>
+      <span>{{ item?.name }}</span>
+      <span>
               <a href="javascript:void(0);" (click)="removeItem(item?.id)">
                 <fa-icon [icon]="faTrash"></fa-icon>
               </a>
-              <a href="javascript:void(0);" (click)="currentEditItem = item; openModal(riskEditModal)">
+              <a href="javascript:void(0);" [routerLink]="['.', item?.id]">
                 <fa-icon [icon]="faEdit"></fa-icon>
               </a>
       </span>
-        </div>
     </div>
+  </div>
 </div>
