--- a/frontend/src/app/data-entry/population/detail/population-detail.component.html
+++ b/frontend/src/app/data-entry/population/detail/population-detail.component.html
@@ -13,19 +13,19 @@
       </div>
       <div class="wrap">
         <label>家庭住址</label>
-        <span>{{ data?.family_Address }}</span>
+        <span>{{ data?.familyAddress }}</span>
       </div>
       <div class="wrap">
         <label>家庭情况</label>
-        <span>{{ data?.family_Content }}</span>
+        <span>{{ data?.familyContent }}</span>
       </div>
       <div class="wrap">
         <label>联系方式</label>
-        <span>{{ data?.family_Phone }}</span>
+        <span>{{ data?.familyPhone }}</span>
       </div>
       <div class="wrap">
         <label>住户性质</label>
-        <span>{{ data?.family_Type }}</span>
+        <span>{{ data?.familyType }}</span>
       </div>
       <div class="wrap">
         <label>创建人</label>
