--- a/frontend/src/app/shared/components/newest/newest.component.scss
+++ b/frontend/src/app/shared/components/newest/newest.component.scss
@@ -1,6 +1,13 @@
 .newest-panel {
-    width: 600px;
-    min-height: 420px;
+    width: 300px;
+    height: 200px;
     background: #EBEDF4;
     margin: 0 auto 20px;
+}
+
+
+.banner {
+  img {
+    width: 100%;
+  }
 }
