--- a/frontend/src/app/home/home.component.scss
+++ b/frontend/src/app/home/home.component.scss
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  height: 100%;
 }
 
 .left-panel {
@@ -8,5 +9,15 @@
 
 .right-panel {
   flex: 1;
+  flex-flow: wrap;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: left;
+  height: 100%;
+
+  gm-newest {
+    margin: 10px;
+  }
 }
 
