--- a/frontend/src/app/settings/community-manager/community-table/community-table.component.html
+++ b/frontend/src/app/settings/community-manager/community-table/community-table.component.html
@@ -6,8 +6,10 @@
             <span>{{ getCommunityNameById(item?.parentId) }}</span>
             <span>{{ item?.createdBy }}</span>
             <span>{{ item?.createdDate }}</span>
-            <span>
-              <a>删除</a>
+            <span class="menus">
+              <a href="javascript:void(0);" (click)="removeItem(item?.id)">
+                <fa-icon [icon]="faTrash"></fa-icon>
+              </a>
             </span>
         </div>
     </div>
