--- a/frontend/src/app/settings/external-manager/external-manager.component.html
+++ b/frontend/src/app/settings/external-manager/external-manager.component.html
@@ -1,3 +1,4 @@
-<p>
-  external-manager works!
-</p>
+<header>
+  <span>基本设置</span>
+</header>
+<gm-external-table [columns]="columns" [data]="basicsettings"></gm-external-table>
