--- a/frontend/src/app/settings/logs-manager/logs-manager.component.html
+++ b/frontend/src/app/settings/logs-manager/logs-manager.component.html
@@ -4,4 +4,4 @@
 <div class="search-panel">
   <gm-search-bar></gm-search-bar>
 </div>
-<gm-role-table [columns]="columns" [data]="roles"></gm-role-table>
+<gm-log-table [columns]="columns" [data]="logs"></gm-log-table>
