--- a/frontend/src/app/shared/components/modal-container/modal-container.component.html
+++ b/frontend/src/app/shared/components/modal-container/modal-container.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="modal-basic-title">{{ title }}</h4>
-  <button type="button" class="close" aria-label="Close" (click)="dismiss('Cross click')">
+  <h4 class="modal-title" *ngIf="showTitle && title" id="modal-basic-title">{{ title }}</h4>
+  <button type="button" *ngIf="showClose" class="close" aria-label="Close" (click)="dismiss('Cross click')">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
