--- a/frontend/src/app/shared/components/newest/newest.component.html
+++ b/frontend/src/app/shared/components/newest/newest.component.html
@@ -1,5 +1,5 @@
 <div class="newest-panel">
-  <div class="banner">
-    <img src="https://dummyimage.com/600x420">
+  <div class="banner" #banner>
+
   </div>
 </div>
