--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div class="content">
-        <div class="logo">
+        <div class="logo" [routerLink]="['/']">
             <img src="assets/img/iconfont/city.svg">
         </div>
         <h1 class="caption">党群管理系统</h1>
