--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ng-progress [color]="'#008bd0'"></ng-progress>
 <gm-header *ngIf="isLoggedIn" [data]="userInfo"></gm-header>
 <main [class.login-panel]="!isLoggedIn">
   <router-outlet></router-outlet>
