--- a/frontend/src/app/shared/components/header/header.component.html
+++ b/frontend/src/app/shared/components/header/header.component.html
@@ -6,10 +6,10 @@
         <h1 class="caption">党群管理系统</h1>
         <div class="menus">
             <span class="c-li"><fa-icon [icon]="faUserCircle"></fa-icon>{{ data?.name }}</span>
-            <span class="c-li msg-bell">
+            <!--<span class="c-li msg-bell">
                 <fa-icon [icon]="faBell"></fa-icon>
                 <div class="msg">8</div>
-            </span>
+            </span>-->
             <a class="c-li" href="javascript:void(0);" (click)="logout()">注销</a>
         </div>
     </div>
