--- a/frontend/src/app/data-entry/population/population.component.html
+++ b/frontend/src/app/data-entry/population/population.component.html
@@ -6,7 +6,9 @@
     <gm-search-bar></gm-search-bar>
 </div>
 <gm-population-table [columns]="columns" [communities]="communities" [data]="populationList"></gm-population-table>
-
+<div class="paginator">
+  <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+</div>
 <ng-template #populationModal let-close="close" let-dismiss="dismiss">
     <gm-modal-container [dismiss]="dismiss" [title]="'人口信息登记表'">
         <gm-population-editor [communities]="communities" [close]="close" (submitted)="updatePopulation()" [insurances]="insurances"></gm-population-editor>
