--- a/frontend/src/app/settings/community-manager/community-table/community-table.component.html
+++ b/frontend/src/app/settings/community-manager/community-table/community-table.component.html
@@ -5,7 +5,7 @@
             <span>{{ item?.name }}</span>
             <span>{{ getCommunityNameById(item?.parentId) }}</span>
             <span>{{ item?.createdBy }}</span>
-            <span>{{ item?.createdDate }}</span>
+            <span>{{ item?.createdDate | date }}</span>
             <span class="menus">
               <a href="javascript:void(0);" (click)="removeItem(item?.id)">
                 <fa-icon [icon]="faTrash"></fa-icon>
