--- a/frontend/src/app/settings/news-manager/news-manager.component.html
+++ b/frontend/src/app/settings/news-manager/news-manager.component.html
@@ -6,7 +6,9 @@
   <gm-search-bar></gm-search-bar>
 </div>
 <gm-news-table [columns]="columns" [data]="news"></gm-news-table>
-
+<div class="paginator">
+  <ngb-pagination [collectionSize]="queryOptions?.totalCount" (pageChange)="search($event)" [maxSize]="5" [rotate]="true" [boundaryLinks]="true"></ngb-pagination>
+</div>
 <ng-template #communityManagerModal let-close="close" let-dismiss="dismiss">
   <gm-modal-container title="创建新闻" [dismiss]="dismiss">
     <gm-news-create [news]="news" [close]="close" (submitted)="updateNewsList()"></gm-news-create>
