--- a/frontend/src/styles/_lib.scss
+++ b/frontend/src/styles/_lib.scss
@@ -16,15 +16,15 @@ app-login {
 }
 
 %table-base {
+  background-color: #fff;
+  border: 1px solid $ca-grey;
+  border-radius: 5px;
+
   .body {
     .data-item {
       display: flex;
       align-items: center;
       line-height: 2;
-
-      &:nth-child(2n) {
-        background: #f8f8f8;
-      }
 
       >span, button {
         flex: 1;
@@ -61,4 +61,87 @@ app-login {
     width: 30px;
     height: 20px;
   }
+}
+
+.data-panel {
+  @extend %table-base;
+  min-height: 300px;
+
+  .box {
+    border: 1px solid #ccc;
+  }
+
+  .wrap {
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid #ccc;
+    padding: 5px;
+
+    &:nth-last-child(1) {
+      border: none !important;
+    }
+
+    label {
+      width: 100px;
+      margin: 0;
+      border-right: 1px solid #ccc;
+    }
+
+    >span {
+      flex: 1;
+      padding-left: 20px;
+    }
+  }
+
+  .data-item {
+    >span {
+      height: 30px;
+    }
+  }
+}
+
+.paginator {
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+
+   ngb-pagination {
+    .page-link {
+      border: none !important;
+      box-shadow: none !important;
+      background: transparent;
+
+      &:hover {
+        background-color: transparent;
+      }
+    }
+
+     .page-item.active {
+       .page-link {
+         box-shadow: none;
+
+         &:focus {
+           box-shadow: none !important;
+         }
+         &:hover {
+           background: none !important;
+           border-bottom: 2px solid $ca-blue;
+         }
+         outline: none;
+         color: $ca-black;
+         background: none;
+         border-bottom: 2px solid $ca-blue !important;
+       }
+     }
+  }
+}
+
+.data-entry-panel {
+  display: flex;
+  height: 100%;
+}
+
+.data-set {
+  flex: 1;
+  padding: 10px;
 }
